--- a/dashboard.html
+++ b/dashboard.html
@@ -556,7 +556,7 @@
       <div class="media" style="background-image:url('Gapura-Selamat-Datang-Kota-Cirebon.jpg')"></div>
     </a>
     <a class="card" href="Tari-Sintren.png" target="_blank" title="Event 3">
-      <div class="media" style="background-image:url('Tari-Sintren.png')"></div>
+      <div class="media" style="background-image:url('Tari_Sintrenn.png')"></div>
     </a>
     <a class="card" href="british-american-tobacco.jpg" target="_blank" title="Event 4">
       <div class="media" style="background-image:url('british-american-tobacco.jpg')"></div>
@@ -650,3 +650,4 @@ if (window.location.pathname.includes("dashboard.html")) {
   </script>
 </body>
 </html>
+
