--- a/budaya.html
+++ b/budaya.html
@@ -731,7 +731,7 @@ top: 0;
 
   <!-- Mobile menu -->
   <div class="nav-center mobile" id="mobileMenu">
-        <a href="dashboard.html">Budaya</a>
+        <a href="dashboard.html">Home</a>
     <a href="budaya.html">Budaya</a>
     <a href="event.html">Event</a>
     <a href="galery.html">Galeri</a>
@@ -750,7 +750,7 @@ top: 0;
 
   <div class="icon-budaya">
     <div class="circle">
-      <img src="batik.png" alt="Batik Mega Mendung">
+      <img src="kain_batik.png" alt="Batik Mega Mendung">
       <p>Batik Mega<br>Mendung</p>
     </div>
     <div class="circle">
@@ -901,3 +901,4 @@ if (window.location.pathname.includes("dashboard.html")) {
   </script>
 </body>
 </html>
+
