--- a/budaya.html
+++ b/budaya.html
@@ -750,7 +750,7 @@ top: 0;
 
   <div class="icon-budaya">
     <div class="circle">
-      <img src="kain_batik.png" alt="Batik Mega Mendung">
+      <img src="kain_batik.jpg" alt="Batik Mega Mendung">
       <p>Batik Mega<br>Mendung</p>
     </div>
     <div class="circle">
@@ -901,4 +901,5 @@ if (window.location.pathname.includes("dashboard.html")) {
   </script>
 </body>
 </html>
+
 
