--- a/sejarah.html
+++ b/sejarah.html
@@ -339,7 +339,7 @@
 <!-- NAVIGATION -->
 <nav class="nav">
   <div class="nav-inner">
-    <a href="#" class="brand"><img src="photo/logo.png" alt="Logo"></a>
+    <a href="#" class="brand"><img src="logo.png" alt="Logo"></a>
     <div class="nav-center">
       <ul>
         <li><a href="dashboard.html">Beranda</a></li>
@@ -355,7 +355,7 @@
 
   <!-- Mobile menu -->
   <div class="nav-center mobile" id="mobileMenu">
-        <a href="dashboard.html">Budaya</a>
+        <a href="dashboard.html">Home</a>
     <a href="budaya.html">Budaya</a>
     <a href="event.html">Event</a>
     <a href="galery.html">Galeri</a>
@@ -377,7 +377,7 @@
 <section id="asal-usul">
   <h3 class="section-title">Abad ke-14</h3>
   <div class="grid two">
-    <div class="card"><div class="media" style="background-image:url('photo/Gapura-Selamat-Datang-Kota-Cirebon.jpg')"></div></div>
+    <div class="card"><div class="media" style="background-image:url('Gapura-Selamat-Datang-Kota-Cirebon.jpg')"></div></div>
     <div class="card pad">
       <h4>Tegal Alang-Alang dan Caruban </h4>
       <p>Pada Awalnya Cirebon adalah sebuah kampung nelayan bernama Tegal Alang-Alang berkembang di pesisir utara Jawa. Lokasinya yang strategis membuat kampung ini menjadi tempat persinggahan para pedagang, termasuk dari Arab, Gujarat, dan China. Pada tahun 1445, Kampung ini dikembangkan oleh Ki Gedeng Alang-alang atau Ki Danusela. Berdasarkan beberapa sumber sejarah, beliau merupakan Kuwu (kepala desa) pertama di Tegal Alang-Alang. Kemudiaan, karena banyaknya percampuran suku bangsa, agama, dan budaya di pedukuhan ini, Tegal Alang-Alang kemudian dikenal dengan nama "Caruban".</p>
@@ -395,14 +395,14 @@
       <h4>Asal-usul Nama Caruban</h4>
       <p>Berdasarkan naskah kuno Purwaka Tjaruban Nagari, Cirebon awalnya merupakan sebuah kampung kecil yang disebut Caruban, yang berarti "campuran" atau "persatuan". Nama ini diberikan karena wilayah tersebut menjadi tempat bertemunya berbagai bangsa, seperti Jawa, Sunda, Tionghoa, dan Arab, yang membawa serta budaya, agama, dan adat istiadat yang beragam.</p>
     </div>
-    <div class="card"><div class="media" style="background-image:url('photo/Pelabuhan-Cirebon-Dulu.jpg')"></div></div>
+    <div class="card"><div class="media" style="background-image:url('Pelabuhan-Cirebon-Dulu.jpg')"></div></div>
   </div>
 </section>
 <!-- ASAL USUL NAMA Cirebon -->
 <section id="asal-usul">
   <h3 class="section-title">Asal-Usul Nama Cirebon </h3>
   <div class="grid two">
-    <div class="card"><div class="media" style="background-image:url('photo/Kapal_tua_pelabuhan_Cirebon.jpg')"></div></div>
+    <div class="card"><div class="media" style="background-image:url('Kapal_tua_pelabuhan_Cirebon.jpg')"></div></div>
     <div class="card pad">
       <h4>Cirebon, Cai dan Rebon</h4>
       <p> Perubahan nama dari "Caruban" menjadi "Cirebon" ini karena faktor mata pencaharian masyarakat lokal. Masyarakat pesisir Cirebon kala itu sangat mengandalkan hasil laut, dan salah satu tangkapan yang paling melimpah adalah udang rebon. Udang-udang kecil ini kemudian diolah menjadi terasi dan petis, yang menjadi komoditas dagang utama. Proses pengolahan ini menghasilkan air sisa yang dikenal sebagai "cai rebon". Nama Cirebon berasal dari kata Cai (bahasa Sunda/Cirebon yang berarti "air") dan Rebon (udang kecil)</p>
@@ -414,7 +414,7 @@
 <section id="Masa Kesultanan Cirebon">
   <h3 class="section-title">Awal dan Berdirinya Kesultanan Cirebon</h3>
   <div class="grid two">
-    <div class="card"><div class="media" style="background-image:url('photo/kesepuhan.png')"></div></div>
+    <div class="card"><div class="media" style="background-image:url('kesepuhan.png')"></div></div>
     <div class="card pad">
       <h4>Masa Kesultanan Cirebon</h4>
       <p>Sebelum menjadi sebuah kesultanan, Cirebon adalah sebuah pemukiman kecil yang berada di bawah kekuasaan Kerajaan Pajajaran yang bercorak Hindu-Buddha. Kesultanan Cirebon resmi berdiri pada tahun 1430, Oleh Pangeran Cakrabuana, putra Prabu Siliwangi, mendirikan bangunan pertama yang kemudian menjadi cikal bakal Keraton Kasepuhan, yang diberi nama Keraton Pakungwati, diambil dari nama putrinya. Pangeran Cakrabuana adalah tokoh yang dianggap sebagai pendiri Kesultanan Cirebon. Pangeran Cakrabuana memeluk Islam dan diberi gelar Haji Abdullah Iman.</p>    </div>
@@ -430,7 +430,7 @@
       <p>Puncak kejayaan dan peran penting Cirebon dalam penyebaran Islam di Jawa Barat dimulai di bawah kepemimpinan Syarif Hidayatullah.</p>
       <p> Sunan Gunung Jati adalah seorang ulama sekaligus pemimpin yang bergelar Pandita-Ratu. Ia berperan besar dalam menyebarkan agama Islam dan memutuskan hubungan dengan Kerajaan Pajajaran yang masih menganut Hindu.</p>
     </div>
-    <div class="card"><div class="media" style="background-image:url('photo/sunan_gunung_jati.jpg')"></div></div>
+    <div class="card"><div class="media" style="background-image:url('sunan_gunung_jati.jpg')"></div></div>
   </div>
 </section>
 
@@ -438,7 +438,7 @@
 <section id="Masa Kesultanan Cirebon">
   <h3 class="section-title">Tahun 1482 M</h3>
   <div class="grid two">
-    <div class="card"><div class="media" style="background-image:url('photo/istana-kesepuhan.jpg')"></div></div>
+    <div class="card"><div class="media" style="background-image:url('istana-kesepuhan.jpg')"></div></div>
     <div class="card pad">
       <h4>Peristiwa Bersejarah</h4>
       <p>Sunan Gunung Jati mengambil langkah penting untuk melepaskan diri dari kekuasaan Kerajaan Pajajaran dengan menghentikan pengiriman upeti (pajak) berupa garam dan terasi. Peristiwa ini, yang terjadi pada 2 April 1482 M, menandai berdirinya Kesultanan Cirebon secara resmi dan kini diperingati sebagai hari jadi Kabupaten Cirebon.</p>
@@ -455,14 +455,14 @@
       <p>Sunan Gunung Jati tidak hanya berperan sebagai raja, tetapi juga sebagai pemimpin agama (ulama).</p>
       <p> Pada tahun 1527, Tentara gabungan Demak, Cirebon, dan Banten di bawah pimpinan Fatahillah berhasil merebut Sunda Kalapa dari Portugis dan mengganti namanya menjadi Jayakarta.</p>
     </div>
-    <div class="card"><div class="media" style="background-image:url('photo/crb.jpg')"></div></div>
+    <div class="card"><div class="media" style="background-image:url('crb.jpg')"></div></div>
   </div>
 </section>
 
 <section id="Masa Kesultanan Cirebon">
   <h3 class="section-title">Wafatnya Sunan Gunung Jati</h3>
   <div class="grid two">
-    <div class="card"><div class="media" style="background-image:url('photo/siti-inggit.jpg')"></div></div>
+    <div class="card"><div class="media" style="background-image:url('siti-inggit.jpg')"></div></div>
     <div class="card pad">
       <h4>Tahun 1568 Masehi</h4>
       <p>Setelah wafatnya Sunan Gunung Jati pada 1568, Fatahillah ditunjuk sebagai sultan, namun ia hanya memerintah selama dua tahun (1568-1570). Kemudian dilanjutkan oleh cucu Sunan Gunung Jati, Panembahan Ratu I (Pangeran Mas). Cirebon dalam kondisi stabil dan kondusif, tidak ada lagi ancaman dari Kerajaan Sunda maupun Banten.</p>
@@ -480,7 +480,7 @@
       <p>2. Kesultanan Kanoman : Dipimpin oleh Pangeran Kertawijaya (Sultan Anom I)</p>
       <p>3. Panembahan Cirebon : Dipimpin oleh Pangeran Wangsakerta.</p>
     </div>
-    <div class="card"><div class="media" style="background-image:url('photo/Pendopo_Pengada.jpg')"></div></div>
+    <div class="card"><div class="media" style="background-image:url('Pendopo_Pengada.jpg')"></div></div>
   </div>
 </section>
 
@@ -488,7 +488,7 @@
 <section id="bat">
   <h3 class="section-title">BAT CIREBON</h3>
   <div class="grid two">
-        <div class="card"><div class="media" style="background-image:url('photo/bat_cirebon_dulu.jpg')"></div></div>
+        <div class="card"><div class="media" style="background-image:url('bat_cirebon_dulu.jpg')"></div></div>
     <div class="card pad">
       <h4>Pabrik British American Tobacco (BAT) Cirebon Jawa Barat</h4>
       <p>Gedung ini dibangun pada tahun 1924 dengan gaya arsitektur Art Deco. Awalnya dimiliki oleh perusahaan bernama Indo Egyptian Cigarettes Company, kemudian bergabung dan sepenuhnya dimiliki oleh British American Tobacco (BAT) pada tahun 1923. Pabrik BAT di Cirebon menghentikan seluruh kegiatan produksinya pada tahun 2010. Setelah berhenti beroperasi, gedung ini menjadi bangunan kosong namun tetap terawat dan memiliki nilai sejarah yang tinggi. Saat ini, Gedung BAT menjadi salah satu destinasi wisata di Kota Tua Cirebon dan sering dijadikan tempat untuk berfoto karena arsitekturnya yang khas bergaya kolonial.</p>
@@ -505,19 +505,19 @@
   <div class="kategori-budaya">
   <a href="batik.html" class="box">
     <span>BATIK</span>
-    <img src="photo/buat_batik.png" alt="Batik">
+    <img src="buat_batik.png" alt="Batik">
   </a>
   <a href="kuliner.html" class="box">
     <span>KULINER</span>
-    <img src="photo/empal_gentong.png" alt="Kuliner">
+    <img src="empal_gentong.png" alt="Kuliner">
   </a>
   <a href="tradisi.html" class="box">
     <span>TRADISI</span>
-    <img src="galeri/event.png" alt="Tradisi">
+    <img src="event.png" alt="Tradisi">
   </a>
   <a href="seni.html" class="box">
     <span>SENI</span>
-    <img src="photo/tari_kelana.png" alt="Seni">
+    <img src="tari_kelana.png" alt="Seni">
   </a>
 </div>
 </section>
@@ -527,8 +527,8 @@
 <section id="galeri">
   <h3 class="section-title">Galeri Peninggalan Sejarah</h3>
   <div class="grid two">
-    <div class="card"><div class="media" style="background-image:url('photo/Kutagara_Wadasan.jpg')"></div></div>
-    <div class="card"><div class="media" style="background-image:url('photo/Gapura-Selamat-Datang-Kota-Cirebon.jpg')"></div></div>
+    <div class="card"><div class="media" style="background-image:url('Kutagara_Wadasan.jpg')"></div></div>
+    <div class="card"><div class="media" style="background-image:url('Gapura-Selamat-Datang-Kota-Cirebon.jpg')"></div></div>
   </div>
 </section>
 
@@ -568,3 +568,4 @@
 </script>
 </body>
 </html>
+
