--- a/sejarah.html
+++ b/sejarah.html
@@ -534,8 +534,9 @@
 
 <!-- FOOTER -->
 <footer>
-  <img src="photo/logo.png" alt="Logo" style="height:36px;opacity:.7"/>
-  <div style="margin-top:8px;font-weight:700">Kebudayaan Seni Cirebon</div>
+  <img src="logo.png" alt="Logo" style="height:36px;opacity:.7"/>
+  <div style="margin-top:8px;font-weight:700">JELAJAHI WARISAN CIREBON</div>
+</div>
 </footer>
 
 <script>
@@ -568,4 +569,5 @@
 </script>
 </body>
 </html>
+
 
