--- a/budaya.html
+++ b/budaya.html
@@ -762,7 +762,7 @@ top: 0;
       <p>Tari Topeng<br>Cirebon</p>
     </div>
     <div class="circle">
-      <img src="Tari-Sintren.png" alt="Tari Sintren">
+      <img src="Tari_Sintrenn.png" alt="Tari Sintren">
       <p>Tari<br>Sintren</p>
     </div>
     <div class="circle">
@@ -901,5 +901,6 @@ if (window.location.pathname.includes("dashboard.html")) {
   </script>
 </body>
 </html>
+
 
 
