--- a/batik.html
+++ b/batik.html
@@ -842,7 +842,7 @@ background: #fff;
       <div class="modal-slides">
         <img src="Metra_wadasan_batik2.jpg" alt="Batik Wadasan 1"/>
         <img src="Metra-wadasan-ati.jpg" alt="Batik Wadasan 2"/>
-        <img src="wadasan_crb.jpg" alt="Batik Wadasan 3"/>
+        <img src="wadasan_cr2.jpg" alt="Batik Wadasan 3"/>
       </div>
       <button class="slider-btn prev"></button>
       <button class="slider-btn next"></button>
@@ -875,7 +875,7 @@ Motif Wadasan melambangkan kekuatan, keteguhan, dan kepatuhan kepada Tuhan.</p>
     <div class="modal-slider">
       <h2>Batik Patran Keris</h2>
       <div class="modal-slides">
-        <img src="Batik_Cirebon_Patran_Keris.jpg" alt="Batik Patran Keris 1"/>
+        <img src="Batik_Patran_Keris.jpg" alt="Batik Patran Keris 1"/>
       </div>
     </div>
     <p>Batik Patran Keris adalah salah satu motif batik klasik Cirebon yang simpel namun elegan, memiliki ciri khas warna coklat gelap dan hitam, serta tidak banyak menggunakan ornamen tambahan. <br>
@@ -1094,3 +1094,4 @@ if (window.location.pathname.includes("dashboard.html")) {
   </script>
 </body>
 </html>
+
