--- a/seni.html
+++ b/seni.html
@@ -725,7 +725,7 @@ background: #fff;
   <!-- HERO SLIDER -->
   <header id="beranda" class="hero reveal">
     <div class="slides" id="slides">
-    <div class="slide active" style="background-image:url('Kesenian.png')"></div>
+    <div class="slide active" style="background-image:url('kesenian.png')"></div>
 
       <div class="hero-overlay">
         <div class="hero-caption">
@@ -1132,3 +1132,4 @@ if (window.location.pathname.includes("dashboard.html")) {
   </script>
 </body>
 </html>
+
