--- a/event.html
+++ b/event.html
@@ -652,7 +652,7 @@ background: #6FB2FF;
 <!-- LIST EVENT -->
 <div class="event-list" id="eventList">
   <a class="event-card" data-title="Pameran Lukis Kacan">
-    <img src="event.jpg" alt="Pameran Lukis Kaca" class="event-thumb">
+    <img src="event00.jpg" alt="Pameran Lukis Kaca" class="event-thumb">
     <div class="event-body">
     <div class="event-title">Pameran Lukis Kaca</div>
       <div class="event-desc" data-full='
@@ -1049,3 +1049,4 @@ document.querySelectorAll('#mobileMenu a').forEach(link => {
   </script>
 </body>
 </html>
+
