--- a/galery.html
+++ b/galery.html
@@ -672,7 +672,7 @@
       </div>
 
       <div class="gallery-item" data-title="Pantai Kejawanan">
-        <img src="Tari-Sintren.png" alt="Pantai Kejawanan" />
+        <img src="Tari_Sintrenn.png" alt="Pantai Kejawanan" />
         <h3>Tari Sintren</h3>
         <p>Tarian tradisional mistis yang dimainkan dengan iringan musik gamelan.</p>
       </div>
@@ -953,3 +953,4 @@
     </script>
   </body>
 </html>
+
