--- a/tradisi.html
+++ b/tradisi.html
@@ -452,7 +452,7 @@
       </ul>
     </div>
     <!-- CTA hanya tampil desktop -->
-    <div class="cta"><a class="btn" href="learn.html">Learn More</a></div>
+    <div class="cta"><a class="btn" href="learn.html">   FAQ   </a></div>
     <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
   </div>
 
@@ -462,7 +462,7 @@
     <a href="budaya.html">Budaya</a>
     <a href="event.html">Event</a>
     <a href="galery.html">Galeri</a>
-    <a class="btn" href="learn.html">Learn More</a> <!-- masuk ke hamburger -->
+    <a class="btn" href="learn.html">"   FAQ   "</a> <!-- masuk ke hamburger -->
   </div>
 
 </nav>
@@ -582,3 +582,4 @@ if (window.location.pathname.includes("dashboard.html")) {
   </script>
 </body>
 </html>
+
