--- a/tradisi.html
+++ b/tradisi.html
@@ -462,7 +462,7 @@
     <a href="budaya.html">Budaya</a>
     <a href="event.html">Event</a>
     <a href="galery.html">Galeri</a>
-    <a class="btn" href="learn.html">"   FAQ   "</a> <!-- masuk ke hamburger -->
+    <a class="btn" href="learn.html">   FAQ   </a> <!-- masuk ke hamburger -->
   </div>
 
 </nav>
@@ -582,4 +582,5 @@ if (window.location.pathname.includes("dashboard.html")) {
   </script>
 </body>
 </html>
+
 
