--- a/sejarah.html
+++ b/sejarah.html
@@ -349,7 +349,7 @@
       </ul>
     </div>
     <!-- CTA hanya tampil desktop -->
-    <div class="cta"><a class="btn" href="learn.html">Learn More</a></div>
+    <div class="cta"><a class="btn" href="learn.html">   FAQ   </a></div>
     <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
   </div>
 
@@ -359,7 +359,7 @@
     <a href="budaya.html">Budaya</a>
     <a href="event.html">Event</a>
     <a href="galery.html">Galeri</a>
-    <a class="btn" href="learn.html">Learn More</a> <!-- masuk ke hamburger -->
+    <a class="btn" href="learn.html">   FAQ   </a> <!-- masuk ke hamburger -->
   </div>
 </nav>
 
@@ -569,5 +569,6 @@
 </script>
 </body>
 </html>
+
 
 
