--- a/tradisi.html
+++ b/tradisi.html
@@ -458,7 +458,7 @@
 
   <!-- Mobile menu -->
   <div class="nav-center mobile" id="mobileMenu">
-        <a href="dashboard.html">Budaya</a>
+        <a href="dashboard.html">Home</a>
     <a href="budaya.html">Budaya</a>
     <a href="event.html">Event</a>
     <a href="galery.html">Galeri</a>
@@ -582,5 +582,6 @@ if (window.location.pathname.includes("dashboard.html")) {
   </script>
 </body>
 </html>
+
 
 
