--- a/kuliner.html
+++ b/kuliner.html
@@ -705,17 +705,17 @@ background: #fff;
       </ul>
     </div>
     <!-- CTA hanya tampil desktop -->
-    <div class="cta"><a class="btn" href="learn.html">Learn More</a></div>
+    <div class="cta"><a class="btn" href="learn.html">   FAQ   </a></div>
     <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
   </div>
 
   <!-- Mobile menu -->
   <div class="nav-center mobile" id="mobileMenu">
-        <a href="dashboard.html">Budaya</a>
+        <a href="dashboard.html">Home</a>
     <a href="budaya.html">Budaya</a>
     <a href="event.html">Event</a>
     <a href="galery.html">Galeri</a>
-    <a class="btn" href="learn.html">Learn More</a> <!-- masuk ke hamburger -->
+    <a class="btn" href="learn.html">   FAQ   </a> <!-- masuk ke hamburger -->
   </div>
 
 </nav>
@@ -1019,3 +1019,4 @@ if (window.location.pathname.includes("dashboard.html")) {
   </script>
 </body>
 </html>
+
