--- a/galery.html
+++ b/galery.html
@@ -548,7 +548,7 @@
           </ul>
         </div>
         <!-- CTA hanya tampil desktop -->
-        <div class="cta"><a class="btn" href="learn.html">Learn More</a></div>
+        <div class="cta"><a class="btn" href="learn.html">   FAQ   </a></div>
         <div class="hamburger" id="hamburger">
           <span></span><span></span><span></span>
         </div>
@@ -560,7 +560,7 @@
         <a href="budaya.html">Budaya</a>
         <a href="event.html">Event</a>
         <a href="galery.html">Galeri</a>
-        <a class="btn" href="learn.html">Learn More</a>
+        <a class="btn" href="learn.html">   FAQ   </a>
         <!-- masuk ke hamburger -->
       </div>
     </nav>
@@ -953,4 +953,5 @@
     </script>
   </body>
 </html>
+
 
