--- a/event.html
+++ b/event.html
@@ -599,7 +599,7 @@ background: #6FB2FF;
       </ul>
     </div>
     <!-- CTA hanya tampil desktop -->
-    <div class="cta"><a class="btn" href="learn.html">Learn More</a></div>
+    <div class="cta"><a class="btn" href="learn.html">   FAQ   </a></div>
     <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
   </div>
 
@@ -609,7 +609,7 @@ background: #6FB2FF;
     <a href="budaya.html">Budaya</a>
     <a href="event.html">Event</a>
     <a href="galery.html">Galeri</a>
-    <a class="btn" href="learn.html">Learn More</a> <!-- masuk ke hamburger -->
+    <a class="btn" href="learn.html">   FAQ   </a> <!-- masuk ke hamburger -->
   </div>
 
 </nav>
@@ -1049,5 +1049,6 @@ document.querySelectorAll('#mobileMenu a').forEach(link => {
   </script>
 </body>
 </html>
+
 
 
