--- a/budaya.html
+++ b/budaya.html
@@ -725,7 +725,7 @@ top: 0;
       </ul>
     </div>
     <!-- CTA hanya tampil desktop -->
-    <div class="cta"><a class="btn" href="learn.html">Learn More</a></div>
+    <div class="cta"><a class="btn" href="learn.html">   FAQ   </a></div>
     <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
   </div>
 
@@ -735,7 +735,7 @@ top: 0;
     <a href="budaya.html">Budaya</a>
     <a href="event.html">Event</a>
     <a href="galery.html">Galeri</a>
-    <a class="btn" href="learn.html">Learn More</a> <!-- masuk ke hamburger -->
+    <a class="btn" href="learn.html">   FAQ   </a> <!-- masuk ke hamburger -->
   </div>
 
 </nav>
@@ -901,6 +901,7 @@ if (window.location.pathname.includes("dashboard.html")) {
   </script>
 </body>
 </html>
+
 
 
 
