--- a/kuliner.html
+++ b/kuliner.html
@@ -756,6 +756,14 @@ background: #fff;
         <p>Nasi bungkus daun jati dengan aneka lauk, terkenal sebagai kuliner rakyat Cirebon.</p>
       </div>
     </div>
+    <!-- Nasi Lengko -->
+    <div class="card kuliner-card" data-modal="modal-lengko">
+      <div class="media" style="background-image:url('nasi_lengko.png')" aria-label="Nasi Lengko"></div>
+      <div class="card pad">
+        <h4>Nasi Lengko</h4>
+        <p>Makanan khas dari daerah pesisir utara Jawa, terutama Cirebon dan Indramayu, yang terbuat dari nasi putih disiram bumbu kacang dan kecap manis</p>
+      </div>
+    </div>
 
     <!-- Tahu Gejrot -->
     <div class="card kuliner-card" data-modal="modal-tahu">
@@ -824,7 +832,16 @@ background: #fff;
 </p>
   </div>
 </div>
-
+    
+<div id="modal-lengko" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h2>Nasi Lengko</h2>
+    <img src="nasi_lengko2.jpg" alt="Lengko">
+    <p>Makanan khas dari daerah pesisir utara Jawa, terutama Cirebon dan Indramayu, yang terbuat dari nasi putih disiram bumbu kacang dan kecap manis, lalu ditaburi dengan tahu goreng, tempe goreng, tauge, timun, dan irisan daun kucai, serta taburan bawang goreng dan kerupuk sebagai pelengkap.</p>
+  </div>
+</div>
+    
 <div id="modal-tahu" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
@@ -862,7 +879,7 @@ background: #fff;
 </div>
 
 
-<!-- Modal Kompeni Batik -->
+<!-- Modal -->
 <div id="modal-kerupuk" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
@@ -1019,4 +1036,5 @@ if (window.location.pathname.includes("dashboard.html")) {
   </script>
 </body>
 </html>
+
 
